--- a/index.html
+++ b/index.html
@@ -240,9 +240,7 @@
         <h3 class="title is-4">Procedures</h3>
         <div class="content has-text-justified">
           <p>
-            User interface used for video annotation. a) Participants were first shown the target character and were reminded of the task
-            instructions before the start of each video. b) The overlayed valence and arousal grid that was present while observers annotated the
-            videos. Observers were instructed to continuously rate the emotion of the target character in the video in real-time.
+            User interface used for diagnostic annotation. A random skin cancer image was presented to users. Users are asked to classify which skin cancer type it is among the 8 classes.
           </p>
         </div>
         <div class="content has-text-centered">
@@ -305,61 +303,26 @@
         <h2 class="title is-3">Download</h2>
         <div class="content has-text-justified">
           <p>
-            <strong>VEATIC is available to download for research purposes.</strong>
-          </p>
-          <p>
-            <strong>The copyright remains with the original owners of the video.</strong>
+            <strong>SkinCON is available to download for research purposes.</strong>
           </p>
         </div>
 
         <!-- VEATIC Data. -->
-        <h3 class="title is-4">VEATIC Data</h3>
+        <h3 class="title is-4">SkinCON Data</h3>
         <div class="content has-text-justified">
           <p>
-            This benchmark contains 124 annotated videos.
+            SkinCON contains 25,330 valid skin cancer instance-level class distribution data.
           </p>
-          <p>
+          <!-- <p>
             For each video, the first 70% of the frames are for training and the rest 30% of the frames are for testing. 
             You can directly utilize the dataset class provided in our baseline repository for training and testing your own model.
-          </p>
+          </p> -->
         </div>
         <div class="content has-text-justified">
-          <button class="btn" onclick="location.href='https://drive.google.com/file/d/1HZIw8RGsRwwENhJlhNJRL88YyfiE442N/view?usp=sharing'"><i class="fa fa-download"></i>VEATIC</button>
-        </div>
-        <div class="content has-text-justified">
-          <p>
-            VEATIC also contains videos with interacting characters and ratings for separate characters in the same video. These videos are those with video IDs 98-123.
-          </p>
-        </div>
-        <div class="column has-text-centered">
-          <img src="./static/images/novelrating.png", width="600 px", align="center">
+          <button class="btn" onclick="location.href='https:https://drive.google.com/file/d/1eBdZbigqerw8lkii0Cr6monjRXCdUih8/view?usp=drive_link'"><i class="fa fa-download"></i>SkinCON</button>
         </div>
         <!--/ VEATIC Data. -->
 
-        <!-- Psychophysics. -->
-        <h3 class="title is-4">Psychophysics Data</h3>
-        <div class="content has-text-justified">
-          <p>
-            We also provide individual ratings of each video with video IDs 0-82 for psychophysical studies. These ratings can be found below. 
-            Each column of a file represents one individual's ratings, and same individuals can be identified via their ID markers.
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <button class="btn" onclick="location.href='https://drive.google.com/file/d/1UJ2A5ZJxOzKLW63T_S8DvZ1C8NrSrMgI/view?usp=sharing'"><i class="fa fa-download"></i>VEATIC_Psych</button>
-        </div>
-        <!--/ Psychophysics. -->
-
-        <!-- Target. -->
-        <h3 class="title is-4">Target Characters</h3>
-        <div class="content has-text-justified">
-          <p>
-            You can find the target characters of each video below. We circled out the target character with a red circle in a frame of each video.
-          </p>
-        </div>
-        <div class="content has-text-centered">
-          <button class="btn" onclick="location.href='https://drive.google.com/file/d/1V7jHbeVTSBN8M0IG7-CeHKAWG6b6W4AB/view?usp=sharing'"><i class="fa fa-download"></i>Characters</button>
-        </div>
-        <!--/ Target. -->
 
       </div>
     </div>
@@ -371,8 +334,8 @@
 
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
-    <h2 class="title">BibTeX</h2>
-    <pre><code>
+    <h2 class="title">BibTeX(TBD)</h2>
+    <!-- <pre><code>
       @inproceedings{ren2024veatic,
         title={VEATIC: Video-based Emotion and Affect Tracking in Context Dataset},
         author={Ren, Zhihang and Ortega, Jefferson and Wang, Yifan and Chen, Zhimin and Guo, Yunhui and Yu, Stella X and Whitney, David},
@@ -380,7 +343,7 @@
         pages={4467--4477},
         year={2024}
       }
-    </code></pre>
+    </code></pre> -->
   </div>
 </section>
 
