add another figure

--- a/index.html
+++ b/index.html
@@ -270,24 +270,20 @@
       <!--/ Sample Ratings. -->
 
       <!-- Annotation Distribution. -->
-      <!-- <div class="column">
-        <h2 class="title is-3">Data Distributions</h2>
+      <div class="column">
+        <h2 class="title is-3">DRAPS Performance</h2>
         <div class="columns is-centered">
           <div class="column content">
             <div class="column has-text-centered">
-              <img src="./static/images/VA_dist.png", width="500 px", align="center">
+              <img src="./static/images/performance.png", width="800 px", align="center">
             </div>
             <p>
-              Distribution of valence and arousal ratings across participants.
-              Individual white dots represent the average valence and
-              arousal of the continuous ratings for each video clip for Hollywood
-              movies. Blue squares and green triangles represent the average
-              valence and arousal for documentaries and home videos, respectively.
+              <b>Results on ISIC 2019 Challenge Dataset with &alpha;=0.1</b>. We report coverage and size of naive, RAPS, and our proposed method for eight different image classifiers.
             </p>
           </div>
 
         </div>
-      </div> -->
+      </div>
     </div>
     <!--/ Annotation Distribution. -->
 
