--- a/index.html
+++ b/index.html
@@ -267,8 +267,9 @@
           </p>
         </div>
       </div>
-      <!--/ Sample Ratings. -->
+    </div>
 
+    <div class="columns is-centered">
       <!-- Annotation Distribution. -->
       <div class="column">
         <h2 class="title is-3">DRAPS Performance</h2>
