--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>University of California, Berkeley</span>
-            <span class="author-block"><sup>2</sup>Centaur Labs, Boston MA, USA</span>
-            <span class="author-block"><sup>3</sup>Golden State Dermatology, Albany CA, USA</span>
-            <span class="author-block"><sup>4</sup>The Alan Turing Institute and University College London, London, UK</span>
-            <span class="author-block"><sup>5</sup>University of Oxford, Oxford, United Kingdom</span>
+            <span class="author-block"><sup>2</sup>Centaur Labs</span>
+            <span class="author-block"><sup>3</sup>Golden State Dermatology</span>
+            <span class="author-block"><sup>4</sup>The Alan Turing Institute and University College London</span>
+            <span class="author-block"><sup>5</sup>University of Oxford</span>
             <span class="author-block"><sup>6</sup>University of Texas at Dallas</span>
             <span class="author-block"><sup>7</sup>University of Michigan, Ann Arbor</span>
           </div>
