--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               Kathy Fang<sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://profiles.ucl.ac.uk/90165-tapabrata-rohan-chakraborty">Tapabrata Chakraborty</a><sup>4,5</sup>,
+              <a href="https://profiles.ucl.ac.uk/90165-tapabrata-rohan-chakraborty">Tapabrata Chakraborti</a><sup>4,5</sup>,
             </span>
             <span class="author-block">
               <a href="https://yunhuiguo.github.io/">Yunhui Guo</a><sup>6</sup>,
@@ -144,15 +144,15 @@
                 </a>
               </span> -->
               <!-- Code Link. -->
-              <!-- <span class="link-block">
-                <a href="https://github.com/AlbusPeter/VEATIC"
+              <span class="link-block">
+                <a href="https://github.com/AlbusPeter/SkinCON_DRAPS"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
                   </a>
-              </span> -->
+              </span>
               <!-- Dataset Link. -->
               <!-- <span class="link-block">
                 <a href="https://albuspeter.github.io/projects/VEATIC/wacv24-1091.pdf"
