--- a/index.html
+++ b/index.html
@@ -60,7 +60,14 @@
           More Research
         </a>
         <div class="navbar-dropdown">
-            TBD
+          <a class="navbar-item" href="https://veatic.github.io/">
+            VEATIC
+          </a>
+        </div>
+        <div class="navbar-dropdown"></div>
+          <a class="navbar-item" href="https://berkeleyeat.github.io/">
+            BEAT
+          </a>
         </div>
       </div>
     </div>
@@ -154,15 +161,15 @@
                   </a>
               </span>
               <!-- Dataset Link. -->
-              <!-- <span class="link-block">
-                <a href="https://albuspeter.github.io/projects/VEATIC/wacv24-1091.pdf"
+              <span class="link-block">
+                <a href="https://albuspeter.github.io/projects/SkinCON/SkinCON_MICCAI2024_final.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
                   </span>
                   <span>Poster</span>
                   </a>
-              </span> -->
+              </span>
             </div>
 
           </div>
