--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             VEATIC
           </a>
         </div>
-        <div class="navbar-dropdown"></div>
+        <div class="navbar-dropdown">
           <a class="navbar-item" href="https://berkeleyeat.github.io/">
             BEAT
           </a>
