--- a/index.html
+++ b/index.html
@@ -291,7 +291,6 @@
         </div>
       </div>
     </div>
-    <!--/ Annotation Distribution. -->
 
   </div>
 </section>
@@ -309,21 +308,17 @@
           </p>
         </div>
 
-        <!-- VEATIC Data. -->
+        <!-- Data. -->
         <h3 class="title is-4">SkinCON Data</h3>
         <div class="content has-text-justified">
           <p>
-            SkinCON contains 25,330 valid skin cancer instance-level class distribution data.
+            SkinCON contains 25,330 valid skin cancer instance-level class distribution data. Our original train/val dataset can be accessed <a href="https://drive.google.com/file/d/1YaVQje0dnwWVaIxZEVDq5T10NMAK5ieX/view?usp=drive_link">here</a>.
           </p>
-          <!-- <p>
-            For each video, the first 70% of the frames are for training and the rest 30% of the frames are for testing. 
-            You can directly utilize the dataset class provided in our baseline repository for training and testing your own model.
-          </p> -->
         </div>
         <div class="content has-text-justified">
-          <button class="btn" onclick="location.href='https:https://drive.google.com/file/d/1eBdZbigqerw8lkii0Cr6monjRXCdUih8/view?usp=drive_link'"><i class="fa fa-download"></i>SkinCON</button>
+          <button class="btn" onclick="location.href='https://drive.google.com/file/d/1eBdZbigqerw8lkii0Cr6monjRXCdUih8/view?usp=drive_link'"><i class="fa fa-download"></i>SkinCON</button>
         </div>
-        <!--/ VEATIC Data. -->
+        <!--/ Data. -->
 
 
       </div>
@@ -353,10 +348,6 @@
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
-      <!-- <a class="icon-link"
-         href="./static/videos/nerfies_paper.pdf">
-        <i class="fas fa-file-pdf"></i>
-      </a> -->
       <a class="icon-link" href="https://github.com/AlbusPeter" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
